--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "react-card-slider",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-card-slider-component",
+  "description": "Easy to use card slider",
+  "author": "Jalome",
+  "version": "1.0.3",
+  "main": "dist/ReactCardSlider.js",
+  "module": "dist/ReactCardSlider.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "private": false,
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-card-slider-component": "^1.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/components --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0"
   }
 }
