--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "jalome"
   ],
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "core-js": "^3.18.2",
     "react": "^17.0.2",
     "react-card-slider-component": "^1.0.7",
     "react-dom": "^17.0.2",
@@ -58,8 +58,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.4"
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8"
   }
 }
