added MIT license

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-card-slider-component",
   "description": "Easy to use card slider",
   "author": "Jalome",
-  "version": "1.0.8",
+  "version": "1.0.9",
+  "license": "MIT",
   "main": "dist/ReactCardSlider.js",
   "module": "dist/ReactCardSlider.js",
   "files": [
